--- a/packages.bib
+++ b/packages.bib
@@ -4,6 +4,7 @@
   year = {2019},
   note = {R package version 1.48.0},
 }
+
 @Manual{R-base,
   title = {R: A Language and Environment for Statistical Computing},
   author = {{R Core Team}},
@@ -12,18 +13,21 @@
   year = {2019},
   url = {https://www.R-project.org/},
 }
+
 @Manual{R-Biobase,
   title = {Biobase: Base functions for Bioconductor},
   author = {R. Gentleman and V. Carey and M. Morgan and S. Falcon},
   year = {2019},
   note = {R package version 2.46.0},
 }
+
 @Manual{R-BiocGenerics,
   title = {BiocGenerics: S4 generic functions used in Bioconductor},
   author = {The Bioconductor Dev Team},
   year = {2019},
   note = {R package version 0.32.0},
 }
+
 @Manual{R-BiocParallel,
   title = {BiocParallel: Bioconductor facilities for parallel evaluation},
   author = {Martin Morgan and Valerie Obenchain and Michel Lang and Ryan Thompson and Nitesh Turaga},
@@ -31,19 +35,22 @@
   note = {R package version 1.20.1},
   url = {https://github.com/Bioconductor/BiocParallel},
 }
+
 @Manual{R-Biostrings,
   title = {Biostrings: Efficient manipulation of biological strings},
   author = {H. Pagès and P. Aboyoun and R. Gentleman and S. DebRoy},
   year = {2019},
   note = {R package version 2.54.0},
 }
+
 @Manual{R-bookdown,
   title = {bookdown: Authoring Books and Technical Documents with R Markdown},
   author = {Yihui Xie},
   year = {2020},
-  note = {R package version 0.19},
+  note = {R package version 0.20},
   url = {https://CRAN.R-project.org/package=bookdown},
 }
+
 @Manual{R-ChIPpeakAnno,
   title = {ChIPpeakAnno: Batch annotation of the peaks identified from either ChIP-seq,
 ChIP-chip experiments or any experiments resulted in large
@@ -52,6 +59,7 @@ number of chromosome ranges},
   year = {2020},
   note = {R package version 3.20.1},
 }
+
 @Manual{R-ChIPseeker,
   title = {ChIPseeker: ChIPseeker for ChIP peak Annotation, Comparison, and
 Visualization},
@@ -60,6 +68,7 @@ Visualization},
   note = {R package version 1.22.1},
   url = {https://guangchuangyu.github.io/software/ChIPseeker},
 }
+
 @Manual{R-DelayedArray,
   title = {DelayedArray: A unified framework for working transparently with on-disk and
 in-memory array-like datasets},
@@ -67,6 +76,7 @@ in-memory array-like datasets},
   year = {2020},
   note = {R package version 0.12.3},
 }
+
 @Manual{R-DESeq2,
   title = {DESeq2: Differential gene expression analysis based on the negative
 binomial distribution},
@@ -75,13 +85,16 @@ binomial distribution},
   note = {R package version 1.26.0},
   url = {https://github.com/mikelove/DESeq2},
 }
+
 @Manual{R-dplyr,
   title = {dplyr: A Grammar of Data Manipulation},
-  author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller},
+  author = {Hadley Wickham and Romain François and Lionel {
+             Henry} and Kirill Müller},
   year = {2020},
-  note = {R package version 1.0.0},
+  note = {R package version 1.0.2},
   url = {https://CRAN.R-project.org/package=dplyr},
 }
+
 @Manual{R-factoextra,
   title = {factoextra: Extract and Visualize the Results of Multivariate Data Analyses},
   author = {Alboukadel Kassambara and Fabian Mundt},
@@ -89,6 +102,7 @@ binomial distribution},
   note = {R package version 1.0.7},
   url = {https://CRAN.R-project.org/package=factoextra},
 }
+
 @Manual{R-forcats,
   title = {forcats: Tools for Working with Categorical Variables (Factors)},
   author = {Hadley Wickham},
@@ -96,6 +110,7 @@ binomial distribution},
   note = {R package version 0.5.0},
   url = {https://CRAN.R-project.org/package=forcats},
 }
+
 @Manual{R-futile.logger,
   title = {futile.logger: A Logging Utility for R},
   author = {Brian Lee Yung Rowe},
@@ -103,6 +118,7 @@ binomial distribution},
   note = {R package version 1.4.3},
   url = {https://CRAN.R-project.org/package=futile.logger},
 }
+
 @Manual{R-GenomeInfoDb,
   title = {GenomeInfoDb: Utilities for manipulating chromosome names, including modifying
 them to follow a particular naming style},
@@ -110,18 +126,21 @@ them to follow a particular naming style},
   year = {2020},
   note = {R package version 1.22.1},
 }
+
 @Manual{R-GenomicFeatures,
   title = {GenomicFeatures: Conveniently import and query gene models},
   author = {M. Carlson and H. Pagès and P. Aboyoun and S. Falcon and M. Morgan and D. Sarkar and M. Lawrence and V. Obenchain},
   year = {2020},
   note = {R package version 1.38.2},
 }
+
 @Manual{R-GenomicRanges,
   title = {GenomicRanges: Representation and manipulation of genomic intervals},
   author = {P. Aboyoun and H. Pagès and M. Lawrence},
   year = {2019},
   note = {R package version 1.38.0},
 }
+
 @Manual{R-ggplot2,
   title = {ggplot2: Create Elegant Data Visualisations Using the Grammar of Graphics},
   author = {Hadley Wickham and Winston Chang and Lionel Henry and Thomas Lin Pedersen and Kohske Takahashi and Claus Wilke and Kara Woo and Hiroaki Yutani and Dewey Dunnington},
@@ -129,6 +148,7 @@ them to follow a particular naming style},
   note = {R package version 3.3.2},
   url = {https://CRAN.R-project.org/package=ggplot2},
 }
+
 @Manual{R-ggrepel,
   title = {ggrepel: Automatically Position Non-Overlapping Text Labels with
 'ggplot2'},
@@ -137,6 +157,7 @@ them to follow a particular naming style},
   note = {R package version 0.8.2},
   url = {https://CRAN.R-project.org/package=ggrepel},
 }
+
 @Manual{R-gridExtra,
   title = {gridExtra: Miscellaneous Functions for "Grid" Graphics},
   author = {Baptiste Auguie},
@@ -144,12 +165,14 @@ them to follow a particular naming style},
   note = {R package version 2.3},
   url = {https://CRAN.R-project.org/package=gridExtra},
 }
+
 @Manual{R-IRanges,
   title = {IRanges: Foundation of integer range manipulation in Bioconductor},
   author = {H. Pagès and P. Aboyoun and M. Lawrence},
   year = {2020},
   note = {R package version 2.20.2},
 }
+
 @Manual{R-matrixStats,
   title = {matrixStats: Functions that Apply to Rows and Columns of Matrices (and to
 Vectors)},
@@ -158,6 +181,7 @@ Vectors)},
   note = {R package version 0.56.0},
   url = {https://CRAN.R-project.org/package=matrixStats},
 }
+
 @Manual{R-MetaCycle,
   title = {MetaCycle: Evaluate Periodicity in Large Scale Data},
   author = {Gang Wu and Ron Anafi and John Hogenesch and Michael Hughes and Karl Kornacker and Xavier Li and Matthew Carlucci},
@@ -165,12 +189,14 @@ Vectors)},
   note = {R package version 1.2.0},
   url = {https://CRAN.R-project.org/package=MetaCycle},
 }
+
 @Manual{R-org.Dm.eg.db,
   title = {org.Dm.eg.db: Genome wide annotation for Fly},
   author = {Marc Carlson},
   year = {2019},
   note = {R package version 3.10.0},
 }
+
 @Manual{R-pcaExplorer,
   title = {pcaExplorer: Interactive Visualization of RNA-seq Data Using a Principal
 Components Approach},
@@ -179,6 +205,7 @@ Components Approach},
   note = {https://github.com/federicomarini/pcaExplorer,
 https://federicomarini.github.io/pcaExplorer/},
 }
+
 @Manual{R-pheatmap,
   title = {pheatmap: Pretty Heatmaps},
   author = {Raivo Kolde},
@@ -186,6 +213,7 @@ https://federicomarini.github.io/pcaExplorer/},
   note = {R package version 1.0.12},
   url = {https://CRAN.R-project.org/package=pheatmap},
 }
+
 @Manual{R-plotly,
   title = {plotly: Create Interactive Web Graphics via 'plotly.js'},
   author = {Carson Sievert and Chris Parmer and Toby Hocking and Scott Chamberlain and Karthik Ram and Marianne Corvellec and Pedro Despouy},
@@ -193,6 +221,7 @@ https://federicomarini.github.io/pcaExplorer/},
   note = {R package version 4.9.2.1},
   url = {https://CRAN.R-project.org/package=plotly},
 }
+
 @Manual{R-plyr,
   title = {plyr: Tools for Splitting, Applying and Combining Data},
   author = {Hadley Wickham},
@@ -200,6 +229,7 @@ https://federicomarini.github.io/pcaExplorer/},
   note = {R package version 1.8.6},
   url = {https://CRAN.R-project.org/package=plyr},
 }
+
 @Manual{R-purrr,
   title = {purrr: Functional Programming Tools},
   author = {Lionel Henry and Hadley Wickham},
@@ -207,6 +237,7 @@ https://federicomarini.github.io/pcaExplorer/},
   note = {R package version 0.3.4},
   url = {https://CRAN.R-project.org/package=purrr},
 }
+
 @Manual{R-RColorBrewer,
   title = {RColorBrewer: ColorBrewer Palettes},
   author = {Erich Neuwirth},
@@ -214,6 +245,7 @@ https://federicomarini.github.io/pcaExplorer/},
   note = {R package version 1.1-2},
   url = {https://CRAN.R-project.org/package=RColorBrewer},
 }
+
 @Manual{R-readr,
   title = {readr: Read Rectangular Text Data},
   author = {Hadley Wickham and Jim Hester and Romain Francois},
@@ -221,6 +253,7 @@ https://federicomarini.github.io/pcaExplorer/},
   note = {R package version 1.3.1},
   url = {https://CRAN.R-project.org/package=readr},
 }
+
 @Manual{R-S4Vectors,
   title = {S4Vectors: Foundation of vector-like and list-like containers in
 Bioconductor},
@@ -228,6 +261,7 @@ Bioconductor},
   year = {2020},
   note = {R package version 0.24.4},
 }
+
 @Manual{R-stringr,
   title = {stringr: Simple, Consistent Wrappers for Common String Operations},
   author = {Hadley Wickham},
@@ -235,12 +269,14 @@ Bioconductor},
   note = {R package version 1.4.0},
   url = {https://CRAN.R-project.org/package=stringr},
 }
+
 @Manual{R-SummarizedExperiment,
   title = {SummarizedExperiment: SummarizedExperiment container},
   author = {Martin Morgan and Valerie Obenchain and Jim Hester and Hervé Pagès},
   year = {2019},
   note = {R package version 1.16.1},
 }
+
 @Manual{R-tibble,
   title = {tibble: Simple Data Frames},
   author = {Kirill Müller and Hadley Wickham},
@@ -248,13 +284,15 @@ Bioconductor},
   note = {R package version 3.0.3},
   url = {https://CRAN.R-project.org/package=tibble},
 }
+
 @Manual{R-tidyr,
   title = {tidyr: Tidy Messy Data},
-  author = {Hadley Wickham and Lionel Henry},
+  author = {Hadley Wickham},
   year = {2020},
-  note = {R package version 1.1.0},
+  note = {R package version 1.1.2},
   url = {https://CRAN.R-project.org/package=tidyr},
 }
+
 @Manual{R-tidyverse,
   title = {tidyverse: Easily Install and Load the 'Tidyverse'},
   author = {Hadley Wickham},
@@ -262,6 +300,7 @@ Bioconductor},
   note = {R package version 1.3.0},
   url = {https://CRAN.R-project.org/package=tidyverse},
 }
+
 @Manual{R-VennDiagram,
   title = {VennDiagram: Generate High-Resolution Venn and Euler Plots},
   author = {Hanbo Chen},
@@ -269,6 +308,7 @@ Bioconductor},
   note = {R package version 1.6.20},
   url = {https://CRAN.R-project.org/package=VennDiagram},
 }
+
 @Manual{R-webex,
   title = {webex: Create Interactive Web Exercises in 'R Markdown'},
   author = {Dale Barr and Lisa DeBruine},
@@ -276,6 +316,7 @@ Bioconductor},
   note = {R package version 0.9.1},
   url = {https://CRAN.R-project.org/package=webex},
 }
+
 @Manual{R-XVector,
   title = {XVector: Foundation of external vector representation and manipulation in
 Bioconductor},
@@ -283,6 +324,7 @@ Bioconductor},
   year = {2019},
   note = {R package version 0.26.0},
 }
+
 @Article{Biobase2015,
   author = {W. Huber and V. J. Carey and R. Gentleman and S. Anders and M. Carlson and B. S. Carvalho and H. C. Bravo and S. Davis and L. Gatto and T. Girke and R. Gottardo and F. Hahne and K. D. Hansen and R. A. Irizarry and M. Lawrence and M. I. Love and J. MacDonald and V. Obenchain and A. K. {Ole's} and H. {Pag`es} and A. Reyes and P. Shannon and G. K. Smyth and D. Tenenbaum and L. Waldron and M. Morgan},
   title = {{O}rchestrating high-throughput genomic analysis with {B}ioconductor},
@@ -293,6 +335,7 @@ Bioconductor},
   pages = {115--121},
   url = {http://www.nature.com/nmeth/journal/v12/n2/full/nmeth.3252.html},
 }
+
 @Article{BiocGenerics2015,
   author = {{Huber} and {W.} and {Carey} and V. J. and {Gentleman} and {R.} and {Anders} and {S.} and {Carlson} and {M.} and {Carvalho} and B. S. and {Bravo} and H. C. and {Davis} and {S.} and {Gatto} and {L.} and {Girke} and {T.} and {Gottardo} and {R.} and {Hahne} and {F.} and {Hansen} and K. D. and {Irizarry} and R. A. and {Lawrence} and {M.} and {Love} and M. I. and {MacDonald} and {J.} and {Obenchain} and {V.} and {{Ole's}} and A. K. and {{Pag`es}} and {H.} and {Reyes} and {A.} and {Shannon} and {P.} and {Smyth} and G. K. and {Tenenbaum} and {D.} and {Waldron} and {L.} and {Morgan} and {M.}},
   title = {{O}rchestrating high-throughput genomic analysis with {B}ioconductor},
@@ -303,6 +346,7 @@ Bioconductor},
   pages = {115--121},
   url = {http://www.nature.com/nmeth/journal/v12/n2/full/nmeth.3252.html},
 }
+
 @Book{bookdown2016,
   title = {bookdown: Authoring Books and Technical Documents with {R} Markdown},
   author = {Yihui Xie},
@@ -312,6 +356,7 @@ Bioconductor},
   note = {ISBN 978-1138700109},
   url = {https://github.com/rstudio/bookdown},
 }
+
 @Article{ChIPpeakAnno2010,
   title = {ChIPpeakAnno: a Bioconductor package to annotate ChIP-seq and ChIP-chip data},
   author = {Lihua Zhu and Claude Gazin and Nathan Lawson and Hervé Pagès and Simon Lin and David Lapointe and Michael Green},
@@ -326,6 +371,7 @@ Bioconductor},
   issn = {1471-2105},
   abstract = {BACKGROUND:Chromatin immunoprecipitation (ChIP) followed by high-throughput sequencing (ChIP-seq) or ChIP followed by genome tiling array analysis (ChIP-chip) have become standard technologies for genome-wide identification of DNA-binding protein target sites. A number of algorithms have been developed in parallel that allow identification of binding sites from ChIP-seq or ChIP-chip datasets and subsequent visualization in the University of California Santa Cruz (UCSC) Genome Browser as custom annotation tracks. However, summarizing these tracks can be a daunting task, particularly if there are a large number of binding sites or the binding sites are distributed widely across the genome.RESULTS:We have developed ChIPpeakAnno as a Bioconductor package within the statistical programming environment R to facilitate batch annotation of enriched peaks identified from ChIP-seq, ChIP-chip, cap analysis of gene expression (CAGE) or any experiments resulting in a large number of enriched genomic regions. The binding sites annotated with ChIPpeakAnno can be viewed easily as a table, a pie chart or plotted in histogram form, i.e., the distribution of distances to the nearest genes for each set of peaks. In addition, we have implemented functionalities for determining the significance of overlap between replicates or binding sites among transcription factors within a complex, and for drawing Venn diagrams to visualize the extent of the overlap between replicates. Furthermore, the package includes functionalities to retrieve sequences flanking putative binding sites for PCR amplification, cloning, or motif discovery, and to identify Gene Ontology (GO) terms associated with adjacent genes.CONCLUSIONS:ChIPpeakAnno enables batch annotation of the binding sites identified from ChIP-seq, ChIP-chip, CAGE or any technology that results in a large number of enriched genomic regions within the statistical programming environment R. Allowing users to pass their own annotation data such as a different Chromatin immunoprecipitation (ChIP) preparation and a dataset from literature, or existing annotation packages, such as GenomicFeatures and BSgenome, provides flexibility. Tight integration to the biomaRt package enables up-to-date annotation retrieval from the BioMart database.},
 }
+
 @InBook{ChIPpeakAnno2013,
   booktitle = {Tilling Arrays},
   title = {Integrative analysis of ChIP-chip and ChIP-seq dataset},
@@ -343,6 +389,7 @@ Bioconductor},
   issn = {1064-3745},
   abstract = {Epigenetic regulation and interactions between transcription factors and regulatory genomic regions play crucial roles in controlling transcriptional regulatory networks that drive development, environmental responses, and disease. Chromatin immunoprecipitation (ChIP) followed by high-throughput sequencing (ChIP-seq) and ChIP followed by genomic tiling microarray hybridization (ChIP-chip) are the two of the most widely used technologies for genome-wide identification of DNA protein interactions and histone modification in vivo. Many algorithms and tools have been developed and evaluated that allow identification of transcription factor binding sites from ChIP-seq or ChIP-chip datasets. However, binding site identification is only the first step; the ultimate goal is to discover the regulatory network of the transcription factor (TF). Here, we present a common workflow for downstream analysis of ChIP-chip and ChIP-seq with an emphasis on annotating binding sites and integration with gene expression data to identify direct and indirect targets of the TF. These tools will help with the overall goal of unraveling transcriptional regulatory networks using datasets publicly available in GEO.},
 }
+
 @Article{ChIPseeker2015,
   title = {ChIPseeker: an R/Bioconductor package for ChIP peak annotation, comparison and visualization},
   author = {Guangchuang Yu and Li-Gen Wang and Qing-Yu He},
@@ -354,6 +401,7 @@ Bioconductor},
   pmid = {25765347},
   doi = {10.1093/bioinformatics/btv145},
 }
+
 @Article{DESeq22014,
   title = {Moderated estimation of fold change and dispersion for RNA-seq data with DESeq2},
   author = {Michael I. Love and Wolfgang Huber and Simon Anders},
@@ -364,6 +412,7 @@ Bioconductor},
   issue = {12},
   pages = {550},
 }
+
 @Article{GenomicFeatures2013,
   title = {Software for Computing and Annotating Genomic Ranges},
   author = {Michael Lawrence and Wolfgang Huber and Herv\'e Pag\`es and Patrick Aboyoun and Marc Carlson and Robert Gentleman and Martin Morgan and Vincent Carey},
@@ -374,6 +423,7 @@ Bioconductor},
   doi = {10.1371/journal.pcbi.1003118},
   url = {http://www.ploscompbiol.org/article/info%3Adoi%2F10.1371%2Fjournal.pcbi.1003118},
 }
+
 @Article{GenomicRanges2013,
   title = {Software for Computing and Annotating Genomic Ranges},
   author = {Michael Lawrence and Wolfgang Huber and Herv\'e Pag\`es and Patrick Aboyoun and Marc Carlson and Robert Gentleman and Martin Morgan and Vincent Carey},
@@ -384,6 +434,7 @@ Bioconductor},
   doi = {10.1371/journal.pcbi.1003118},
   url = {http://www.ploscompbiol.org/article/info%3Adoi%2F10.1371%2Fjournal.pcbi.1003118},
 }
+
 @Book{ggplot22016,
   author = {Hadley Wickham},
   title = {ggplot2: Elegant Graphics for Data Analysis},
@@ -392,6 +443,7 @@ Bioconductor},
   isbn = {978-3-319-24277-4},
   url = {https://ggplot2.tidyverse.org},
 }
+
 @Article{IRanges2013,
   title = {Software for Computing and Annotating Genomic Ranges},
   author = {Michael Lawrence and Wolfgang Huber and Herv\'e Pag\`es and Patrick Aboyoun and Marc Carlson and Robert Gentleman and Martin Morgan and Vincent Carey},
@@ -402,6 +454,7 @@ Bioconductor},
   doi = {10.1371/journal.pcbi.1003118},
   url = {http://www.ploscompbiol.org/article/info%3Adoi%2F10.1371%2Fjournal.pcbi.1003118},
 }
+
 @Article{pcaExplorer2019,
   title = {pcaExplorer: an R/Bioconductor package for interacting with RNA-seq principal components},
   journal = {BMC Bioinformatics},
@@ -415,6 +468,7 @@ Bioconductor},
   doi = {10.1186/s12859-019-2879-1},
   url = {http://bioconductor.org/packages/pcaExplorer/},
 }
+
 @Book{plotly2020,
   author = {Carson Sievert},
   title = {Interactive Web-Based Data Visualization with R, plotly, and shiny},
@@ -423,6 +477,7 @@ Bioconductor},
   isbn = {9781138331457},
   url = {https://plotly-r.com},
 }
+
 @Article{plyr2011,
   title = {The Split-Apply-Combine Strategy for Data Analysis},
   author = {Hadley Wickham},
@@ -433,6 +488,7 @@ Bioconductor},
   pages = {1--29},
   url = {http://www.jstatsoft.org/v40/i01/},
 }
+
 @Article{tidyverse2019,
   title = {Welcome to the {tidyverse}},
   author = {Hadley Wickham and Mara Averick and Jennifer Bryan and Winston Chang and Lucy D'Agostino McGowan and Romain François and Garrett Grolemund and Alex Hayes and Lionel Henry and Jim Hester and Max Kuhn and Thomas Lin Pedersen and Evan Miller and Stephan Milton Bache and Kirill Müller and Jeroen Ooms and David Robinson and Dana Paige Seidel and Vitalie Spinu and Kohske Takahashi and Davis Vaughan and Claus Wilke and Kara Woo and Hiroaki Yutani},
@@ -443,3 +499,4 @@ Bioconductor},
   pages = {1686},
   doi = {10.21105/joss.01686},
 }
+
